--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -68,6 +68,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(('a','b'))\n",
+    "print(len(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 'a', 'b']\n",
+      "7\n",
+      "[1, 2, 3, 4, 5, ['a', 'b']]\n",
+      "6\n",
+      "['a', 'b']\n",
+      "['a', 'b']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1,2,3,4,5]\n",
+    "# l.append(3)\n",
+    "# print(l)\n",
+    "# l.pop()\n",
+    "# print(l)\n",
+    "b = l+a\n",
+    "print(b)\n",
+    "print(len(b))\n",
+    "l.append(a)\n",
+    "print(l)\n",
+    "print(len(l))\n",
+    "\n",
+    "\n",
+    "# dwa sposoby na ostatni element \n",
+    "print(l[len(l)-1])\n",
+    "print(l[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -332,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +406,7 @@
     "print(x == 2)\n",
     "print(x != 2)\n",
     "print(x == 3)\n",
-    "print(x < 3) "
+    "print(x <= 3) "
    ]
   },
   {
@@ -363,7 +418,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +446,7 @@
      "output_type": "stream",
      "text": [
       "Your name is Jan and you have 23 years.\n",
-      "Your name is Robert and you have 23 years.\n"
+      "Your name is Robert or you have 23 years.\n"
      ]
     }
    ],
@@ -381,8 +456,8 @@
     "if name == \"Jan\" and age == 23:\n",
     "    print(\"Your name is Jan and you have 23 years.\")\n",
     "\n",
-    "if name == \"Jan\" or age == 23:\n",
-    "    print(\"Your name is Robert and you have 23 years.\")"
+    "if name == \"Robert\" or age == 23:\n",
+    "    print(\"Your name is Robert or you have 23 years.\")"
    ]
   },
   {
@@ -394,20 +469,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nazywasz sie Jan lub Robert\n"
+      "Your name is Jan or Robert\n"
      ]
     }
    ],
    "source": [
     "imie = \"Robert\"\n",
-    "if imie in [\"Jan\", \"Robert\"]:\n",
+    "if imie in (\"Jan\", \"Robert\"):\n",
     "    print (\"Your name is Jan or Robert\")"
    ]
   },
@@ -420,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -429,16 +504,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x is equal two.\n"
+      "x is not equal two and three.\n"
      ]
     }
    ],
    "source": [
-    "x = 2\n",
+    "x = 4\n",
     "if x == 2:\n",
     "    print(\"x is equal two.\")\n",
+    "elif x == 3:\n",
+    "    print(\"x is equal three.\")\n",
     "else:\n",
-    "    print(\"x is not equal two.\")"
+    "    print(\"x is not equal two and three.\")"
    ]
   },
   {
@@ -450,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -463,7 +540,8 @@
       "False\n",
       "True\n",
       "True\n",
-      "[1, 2, 3, 4]\n"
+      "['a', 'b', [1, 2, 3]]\n",
+      "['a', 'b', [1, 2, 3, 4]]\n"
      ]
     }
    ],
@@ -471,16 +549,17 @@
     "x = [1,2,3]\n",
     "y = [1,2,3]\n",
     "print(x == y) \n",
-    "print(x is y) \n",
+    "print(x is y)\n",
     "\n",
     "tab = [1, 2, 3]\n",
     "tab2 = ['a', 'b', tab]\n",
+    "\n",
     "print(tab == tab2[2])\n",
     "print(tab is tab2[2])\n",
     "\n",
-    "\n",
+    "print(tab2)\n",
     "tab.append(4) \n",
-    "print(tab2[2]) "
+    "print(tab2) "
    ]
   },
   {
@@ -1021,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1029,8 +1108,7 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "2\n",
-      "3\n"
+      "2\n"
      ]
     }
    ],
@@ -1038,10 +1116,93 @@
     "i = 1\n",
     "while i < 6:\n",
     "    print(i)\n",
+    "    i = i + 1\n",
     "    if i == 3:\n",
     "        break\n",
-    "#         continue\n",
-    "    i += 1"
+    "#         continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=1\n",
+    "while i<=20:\n",
+    "    print(i)\n",
+    "    i = i+2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 7 # 3*2 + 1\n",
+    "print(a%2 == 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=0\n",
+    "while i<=20:\n",
+    "    if i%2 == 1:\n",
+    "        print(i)\n",
+    "    i = i+1\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -1053,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1093,6 +1254,126 @@
    "source": [
     "for x in \"banana\":\n",
     "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = [1,2,3,4,5]\n",
+    "for x in list:\n",
+    "    print(x)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(1,21,2):\n",
+    "    # if x%2 == 1 :\n",
+    "        print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "3\n",
+      "6\n",
+      "9\n",
+      "12\n",
+      "15\n",
+      "18\n",
+      "21\n",
+      "24\n",
+      "27\n",
+      "30\n",
+      "33\n",
+      "36\n",
+      "39\n",
+      "42\n",
+      "45\n",
+      "48\n",
+      "51\n",
+      "54\n",
+      "57\n",
+      "60\n",
+      "63\n",
+      "66\n",
+      "69\n",
+      "72\n",
+      "75\n",
+      "78\n",
+      "81\n",
+      "84\n",
+      "87\n",
+      "90\n",
+      "93\n",
+      "96\n",
+      "99\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(0, 100, 3):\n",
+    "    print(number)"
    ]
   },
   {
