improvements in lessons 1-4

--- a/lessons/Lesson 1 - Introduction.ipynb
+++ b/lessons/Lesson 1 - Introduction.ipynb
@@ -76,6 +76,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = True\n",
+    "print(d)\n",
+    "print(type(d))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
