--- a/lessons/Lesson 3 - Conditional Instructions & Operators.ipynb
+++ b/lessons/Lesson 3 - Conditional Instructions & Operators.ipynb
@@ -73,6 +73,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use of * operator with types other than int and float"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -102,22 +109,6 @@
     "print(x >= 2) \n",
     "print(x < 2)\n",
     "print(x > 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Task: write statement that will return true if number is even and  higer than 10."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "..."
    ]
   },
   {
@@ -203,6 +194,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Task: write statement that will return true if number is even and  higer than 10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Task: write statement that represent XOR.\n",
     "\n",
     "*XOR is logical operator that returns true only when two variables has diffenet value"
@@ -215,6 +222,17 @@
    "outputs": [],
    "source": [
     "..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = True\n",
+    "b = False\n",
+    "a ^ b"
    ]
   },
   {
@@ -241,7 +259,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a *= 2\n",
+    "a *= 4\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a /= 2\n",
     "a"
    ]
   },
@@ -284,8 +312,7 @@
     "tab2 = ['a', 'b', tab]\n",
     "\n",
     "print(tab == tab2[2])\n",
-    "print(tab is tab2[2])\n",
-    "print(tab is not tab2[2])"
+    "print(tab is tab2[2])"
    ]
   },
   {
@@ -300,10 +327,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tab = [1, 2, 3]\n",
+    "tab3 = ['a', 'b', tab.copy()]\n",
+    "\n",
+    "print(tab is tab3[2])\n",
+    "print(tab is not tab3[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(tab3)\n",
+    "tab.append(4) \n",
+    "print(tab3) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: check if copy of list is this list\n",
+    "Task: check if copy of list `is` this list\n",
     "    \n",
     "*use `copy()` function "
    ]
@@ -346,7 +397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: check if copy of list is in this list\n",
+    "Task: check if list is in itself\n",
     "    \n",
     "*use `copy()` function "
    ]
@@ -420,16 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bin(~a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "0b1010 & 0b1010"
+    "bin(0b1010 & 0b1000)"
    ]
   },
   {
