--- a/lessons/Lesson 4 - Loops.ipynb
+++ b/lessons/Lesson 4 - Loops.ipynb
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: print numbers from 1 to 5 using for loop"
+    "Task: print numbers from 1 to 5 using for loop and a list"
    ]
   },
   {
