--- a/lessons/Lesson 2 - Containers Part I - Lists & Tuples.ipynb
+++ b/lessons/Lesson 2 - Containers Part I - Lists & Tuples.ipynb
@@ -71,8 +71,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.pop(1)\n",
-    "print(c)"
+    "print([1,2,3].pop())\n",
+    "print([1,2,3].pop(0))\n",
+    "print([1,2,3].pop(1))\n",
+    "print([1,2,3].pop(2))\n",
+    "print([1,2,3].pop(-1))"
    ]
   },
   {
@@ -91,15 +94,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list = [ 'a', 2 , 3, 'b', 5 ]\n",
+    "my_list = [ 'a', 2 , 3, 'b', 5 ]\n",
     "tinylist = [6, 'c']\n",
     "\n",
-    "print(list)          # Prints complete list\n",
-    "print(list[0])       # Prints first element of the list\n",
-    "print(list[1:3])     # Prints elements starting from 2nd till 3rd \n",
-    "print(list[2:])      # Prints elements starting from 3rd element\n",
+    "print(my_list)          # Prints complete list\n",
+    "print(my_list[0])       # Prints first element of the list\n",
+    "print(my_list[1:3])     # Prints elements starting from 2nd till 3rd \n",
+    "print(my_list[2:])      # Prints elements starting from 3rd element\n",
     "print(tinylist * 2)  # Prints list two times\n",
-    "print(list + tinylist) # Prints concatenated lists"
+    "print(my_list + tinylist) # Prints concatenated lists"
    ]
   },
   {
@@ -190,15 +193,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tuple = ('a', 2 , 3, 'b', 5)\n",
+    "my_tuple = ('a', 2 , 3, 'b', 5)\n",
     "tinytuple = (6, 'c')\n",
     "\n",
-    "print(tuple)           # Prints complete list\n",
-    "print(tuple[0])       # Prints first element of the list\n",
-    "print(tuple[1:3])      # Prints elements starting from 2nd till 3rd \n",
-    "print(tuple[2:])       # Prints elements starting from 3rd element\n",
+    "print(my_tuple)           # Prints complete list\n",
+    "print(my_tuple[0])       # Prints first element of the list\n",
+    "print(my_tuple[1:3])      # Prints elements starting from 2nd till 3rd \n",
+    "print(my_tuple[2:])       # Prints elements starting from 3rd element\n",
     "print(tinytuple * 2)   # Prints list two times\n",
-    "print(tuple + tinytuple) # Prints concatenated lists"
+    "print(my_tuple + tinytuple) # Prints concatenated lists"
    ]
   },
   {
@@ -207,7 +210,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list[0] = 1"
+    "my_list = []\n",
+    "my_list[0] = 1"
    ]
   },
   {
@@ -216,14 +220,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tuple[0] = 1"
+    "my_list = ()\n",
+    "my_tuple[0] = 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: pack two integers into one variable using list and tuple. "
+    "Task: pack two integers into one variable using list [] and tuple ()"
    ]
   },
   {
