--- a/lessons/Lesson 2 - Containers Part I - Lists & Tuples.ipynb
+++ b/lessons/Lesson 2 - Containers Part I - Lists & Tuples.ipynb
@@ -239,6 +239,28 @@
    "source": [
     "..."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 False\n",
+      "1 0 True\n",
+      "0 1 True\n",
+      "0 0 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in [1,0]:\n",
+    "    for b in [1, 0]:\n",
+    "        print(a,b,(a or b) and not (a and b))"
+   ]
   }
  ],
  "metadata": {
