--- a/lessons/Lesson 1 - Introduction.ipynb
+++ b/lessons/Lesson 1 - Introduction.ipynb
@@ -1,6 +1,53 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dupa\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    print(\"dupa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 6)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(len(l))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
