descriptions in Lesson 01 and 02

--- a/lessons/Lesson 01 - Introduction.ipynb
+++ b/lessons/Lesson 01 - Introduction.ipynb
@@ -11,19 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How to Jupyter Notebook"
+    "# How to use Jupyter Notebook"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **B** to create new block of code \\[B\\]elow current block\n",
-    "- **A** to do the same \\[A\\]bove\n",
-    "- **D+D** to \\[D\\]elete block of code\n",
-    "- **Ctr+Enter** to Run selected cell\n",
-    "- **Shift+Enter** to Run selected cell and\n",
-    "- **Ctrl+/** to comment line of code"
+    "- `B` to create new block of code \\[B\\]elow current block\n",
+    "- `A` to do the same \\[A\\]bove\n",
+    "- `D+D` to \\[D\\]elete block of code\n",
+    "- `Ctr+Enter` to Run selected cell\n",
+    "- `Shift+Enter` to Run selected cell and\n",
+    "- `Ctrl+/` to comment line of code"
    ]
   },
   {
@@ -50,16 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = 1000.0\n",
+    "b = 100.0\n",
     "print(b)\n",
     "print(type(b))"
    ]
@@ -70,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = \"John\"\n",
+    "c = \"text\"\n",
     "print(c)\n",
     "print(type(c))"
    ]
@@ -84,6 +75,90 @@
     "d = True\n",
     "print(d)\n",
     "print(type(d))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Changing variable value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a)\n",
+    "a = 0\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "changing variable type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a)\n",
+    "a = 'text'\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Q: why is it possible?\n",
+    "\n",
+    "A: that's because python has dynamic types - which means variable don't have to have explicity type when initialised and type of data that variable is istoring can be changed. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Casting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = int(100)\n",
+    "print(a, type(a))\n",
+    "a = float(100)\n",
+    "print(a, type(a))\n",
+    "a = bool(100)\n",
+    "print(a, type(a))\n",
+    "a = str(100)\n",
+    "print(a, type(a))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Not all types can be casted to other types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = int('text')"
    ]
   },
   {
@@ -126,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#This is comment\n",
+    "# This is comment\n",
     "'''\n",
     "this \n",
     "is \n",
@@ -140,6 +215,13 @@
    "metadata": {},
    "source": [
     "# Variable initialization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assigning a value to just created variable is called an initialization"
    ]
   },
   {
@@ -188,13 +270,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: list all known to you basic types in python"
+    "# Task\n",
+    "List all known to you basic python types initialize them and print out their values.\n",
+    "\n",
+    "Can you cast value of all of them to bool?"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "..."
+   ]
   }
  ],
  "metadata": {
