--- a/lessons/Lesson 03 - Conditional Instructions & Operators.ipynb
+++ b/lessons/Lesson 03 - Conditional Instructions & Operators.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lesson 3 - Conditional Instructions & Operators"
+    "# Lesson 3 - Conditional Instructions & Operators"
    ]
   },
   {
@@ -194,7 +194,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: write statement that will return true if number is even and  higer than 10."
+    "# Task\n",
+    "Write statement that will return true if number is even and  higer than 10."
    ]
   },
   {
@@ -210,9 +211,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: write statement that represent XOR.\n",
+    "# Task: \n",
+    "write statement that represent XOR.\n",
     "\n",
-    "*XOR is logical operator that returns true only when two variables has diffenet value"
+    "XOR is logical operator that returns true only when two variables has diffenet value"
    ]
   },
   {
@@ -354,9 +356,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: check if copy of list `is` this list\n",
-    "    \n",
-    "*use `copy()` function "
+    "# Task: \n",
+    "check if copy of list `is` this list, use `copy()` function "
    ]
   },
   {
@@ -397,9 +398,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: check if list is in itself\n",
-    "    \n",
-    "*use `copy()` function "
+    "# Task: \n",
+    "check if list is in itself, use `copy()` function "
    ]
   },
   {
@@ -526,7 +526,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: write if statement, that checks if three lengths can form a triangle."
+    "# Task: \n",
+    "Write if statement, that checks if three lengths can form a triangle."
    ]
   },
   {
@@ -542,7 +543,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: write if else statement that check if three points are on the same line "
+    "# Task: \n",
+    "Write if else statement that check if three points are on the same line "
    ]
   },
   {
@@ -588,5 +590,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
