--- a/lessons/Lesson 04 - Loops.ipynb
+++ b/lessons/Lesson 04 - Loops.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lesson 4 - Loops"
+    "# Lesson 4 - Loops"
    ]
   },
   {
@@ -124,7 +124,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: print numbers from 1 to 5 using for loop and a list"
+    "# Task: \n",
+    "print numbers from 1 to 5 using for loop and a list"
    ]
   },
   {
@@ -140,7 +141,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: print even numbers from 1 to 20 using for loop and if statement"
+    "# Task: \n",
+    "print even numbers from 1 to 20 using for loop and if statement"
    ]
   },
   {
@@ -220,7 +222,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: write all combintations of two 6-sided dies. "
+    "# Task: \n",
+    "write all combintations of two 6-sided dies. "
    ]
   },
   {
@@ -236,7 +239,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: write for loop that reverse all elements in list"
+    "# Task: \n",
+    "write for loop that reverse all elements in list"
    ]
   },
   {
@@ -282,5 +286,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
