--- a/lessons/Lesson 05 - Containers Part II - Dictionary & Set.ipynb
+++ b/lessons/Lesson 05 - Containers Part II - Dictionary & Set.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lesson 5 - Containers Part II - Dictionary & Set"
+    "# Lesson 5 - Containers Part II - Dictionary & Set"
    ]
   },
   {
@@ -111,7 +111,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: create dict with information about music abum of your favourite band."
+    "# Task: \n",
+    "create dict with information about music abum of your favourite band."
    ]
   },
   {
@@ -217,7 +218,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: introduce yourself to set class functions, and use them on two sample sets.\n",
+    "# Task: \n",
+    "introduce yourself to the following functions of set class, and use them on two sample sets.\n",
     "\n",
     "- `intersection()`\tReturns a set, that is the intersection of two other sets\n",
     "- `intersection_update()`\tRemoves the items in this set that are not present in other, specified set(s)\n",
@@ -295,7 +297,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: Create that capitalize first letter of each word in string. Use `capitalize()` function in string class."
+    "# Task: \n",
+    "Create that capitalize first letter of each word in string. Use `capitalize()` function in string class."
    ]
   },
   {
@@ -341,5 +344,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
