--- a/lessons/Lesson 06 - String Formatting.ipynb
+++ b/lessons/Lesson 06 - String Formatting.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lesson 5 - String Formatting"
+    "# Lesson 5 - String Formatting"
    ]
   },
   {
@@ -129,7 +129,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: format this data into message string\n",
+    "# Task: \n",
+    "format this data into message string\n",
     "\n",
     "```python\n",
     "brand, model, year = \"Nissan\", \"Navara\", 2007\n",
@@ -290,7 +291,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: write code that extract information from this strings:\n",
+    "# Task: \n",
+    "write code that extract information from this strings:\n",
     "\n",
     "```python\n",
     "msg1 = \"Hi, my name is Alice, I play piano and I'm 15\"\n",
@@ -361,7 +363,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: print string with content: \n",
+    "# Task: \n",
+    "print string with content: \n",
     "\n",
     "[ \\ ^ $ . | ? * + ( )\n"
    ]
@@ -404,7 +407,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: format this data to look like a business card:\n",
+    "# Task: \n",
+    "format this data to look like a business card:\n",
     "\n",
     "```python\n",
     "name = \"John\"\n",
@@ -458,5 +462,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
