--- a/lessons/Lesson 07 - Functions.ipynb
+++ b/lessons/Lesson 07 - Functions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lesson 7 - Functions"
+    "# Lesson 7 - Functions"
    ]
   },
   {
@@ -140,7 +140,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: Create function that remove every element on even position in given list."
+    "# Task: \n",
+    "Create function that remove every element on even position in given list."
    ]
   },
   {
@@ -156,7 +157,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: Create function that returns value of: \\begin{equation*}f(x) = x^3 + 2x + 2\\end{equation*}"
+    "# Task: \n",
+    "Create function that returns value of $\\begin{equation*}f(x) = x^3 + 2x + 2\\end{equation*}$"
    ]
   },
   {
@@ -172,7 +174,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: Create function that calcualtes fibonnaci sequence n-th element"
+    "# Task: \n",
+    "Create function that calcualtes fibonnaci sequence n-th element"
    ]
   },
   {
@@ -218,5 +221,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
