--- a/lessons/Lesson 08 - Lambdas.ipynb
+++ b/lessons/Lesson 08 - Lambdas.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lesson 8 - Lambdas"
+    "# Lesson 8 - Lambdas"
    ]
   },
   {
@@ -116,7 +116,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: Create lambda function that returns list of squares of each element in given list"
+    "# Task: \n",
+    "Create lambda function that returns list of squares of each element in given list"
    ]
   },
   {
@@ -132,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: Create lambda function that returns sum of squares of each element in given list"
+    "# Task: Create lambda function that returns sum of squares of each element in given list"
    ]
   },
   {
@@ -148,7 +149,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: Create function that contains lambda expression, that calculate n'th power of each element in list, where n is defined by argument in lambda expression"
+    "# Task: \n",
+    "Create function that contains lambda expression, that calculate n'th power of each element in list, where n is defined by argument in lambda expression"
    ]
   },
   {
@@ -194,5 +196,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
