--- a/lessons/Lesson 09 - Classes.ipynb
+++ b/lessons/Lesson 09 - Classes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lesson 9 - Classes"
+    "# Lesson 9 - Classes"
    ]
   },
   {
@@ -146,7 +146,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: create class `Point` that initiates itself with default values `x=0, y=0`. Create method:\n",
+    "# Task: \n",
+    "create class `Point` that initiates itself with default values `x=0, y=0`. Create method:\n",
     "\n",
     "- `get_coefficients()`, that returns x and y value.\n",
     "- `get_length(x,y)`, that returns distance between point and given x and y coefficients. "
@@ -165,7 +166,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: Create class `Menu`, that have field `food_list`, and method `add_dish()`, that append its list field with new string object. "
+    "# Task: \n",
+    "Create class `Menu`, that have field `food_list`, and method `add_dish()`, that append its list field with new string object. "
    ]
   },
   {
@@ -181,7 +183,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: create class `Triangle`, that have list of 3 points representing its vertices. Use class Point to keep points. Create methods:\n",
+    "# Task: \n",
+    "create class `Triangle`, that have list of 3 points representing its vertices. Use class Point to keep points. Create methods:\n",
     "\n",
     "- `get_coefficients()`, that returns x and y value for each point.\n",
     "- `get_area()`, that returns surface area\n",
@@ -231,5 +234,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
