--- a/lessons/Lesson 10 - Inheritance.ipynb
+++ b/lessons/Lesson 10 - Inheritance.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lesson 10 - Inheritance"
+    "# Lesson 10 - Inheritance"
    ]
   },
   {
@@ -90,7 +90,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: Write class `Animal`. Create methods:\n",
+    "# Task: \n",
+    "Write class `Animal`. Create methods:\n",
     "        \n",
     "- `get_sound()`\n",
     "- `get_name()`\n",
@@ -144,5 +145,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
