--- a/lessons/Lesson 02 - Containers Part I - Lists & Tuples.ipynb
+++ b/lessons/Lesson 02 - Containers Part I - Lists & Tuples.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lesson 2 - Containers Part I - Lists & Tuples"
+    "# Lesson 2 - Containers Part I - Lists & Tuples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Containers are variables that can store multiple values of one or more type."
    ]
   },
   {
@@ -12,6 +19,13 @@
    "metadata": {},
    "source": [
     "# List"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List initialization:"
    ]
   },
   {
@@ -25,12 +39,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In example above we have showed value of a list without using `print` function.\n",
+    "\n",
+    "We have just written variable name at the end of a cell.\n",
+    "This is possible only in notebook-like IDEs.\n",
+    "\n",
+    "In this case value is an output of cell: `[1]: [1,2]`\n",
+    "\n",
+    "Notice that if we print out value it shows up without `[1]:` because it is not an output of a cell. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function `len` returns length of a list"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "len(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To add element to a list use `append` function. Notice, that you can store multiple different types in list"
    ]
   },
   {
@@ -45,6 +96,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "to remove an element from list use `pop` function "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -52,6 +110,13 @@
    "source": [
     "print(l.pop())\n",
     "print(l)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can add lists to each other, which result in concatenation of them"
    ]
   },
   {
@@ -63,6 +128,13 @@
     "k = [3,4]\n",
     "c = l+k\n",
     "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that `pop` function returns removed from list value. If you don't provide argument to this function it will remove last element. "
    ]
   },
   {
@@ -79,6 +151,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you append a list to list it will be one of its elements. If you want to concatenate two list use `+` operator"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -89,20 +168,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To get a part of list use square bracet notation `[f:l]`, where `f` is first index of fragment that you want to extract and `l` is index of last element. \n",
+    "\n",
+    "If you want to extract first theree elements, write `[0:3]` "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "my_list = [ 'a', 2 , 3, 'b', 5 ]\n",
-    "tinylist = [6, 'c']\n",
-    "\n",
-    "print(my_list)          # Prints complete list\n",
-    "print(my_list[0])       # Prints first element of the list\n",
-    "print(my_list[1:3])     # Prints elements starting from 2nd till 3rd \n",
-    "print(my_list[2:])      # Prints elements starting from 3rd element\n",
-    "print(tinylist * 2)  # Prints list two times\n",
-    "print(my_list + tinylist) # Prints concatenated lists"
+    "tinylist = [6, 'c']"
    ]
   },
   {
@@ -111,15 +192,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(c[len(c)-1])\n",
-    "print(c[-1])"
+    "print(my_list)          # complete list\n",
+    "print(my_list[0])       # first element of the list\n",
+    "print(my_list[1:3])     # elements starting from 2nd till 3rd \n",
+    "print(my_list[2:])      # elements starting from 3rd element\n",
+    "print(tinylist * 2)  # list two times\n",
+    "print(my_list + tinylist) # concatenated lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(my_list[len(my_list)-1])\n",
+    "print(my_list[-1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: divide list \\[1,2,3,4\\] into \\[1,2\\], \\[3,4\\] using \\[\\] operator"
+    "# Task\n",
+    "Divide list `[1,2,3,4]` into `[1,2]`, `[3,4]` using `[]` operator"
    ]
   },
   {
@@ -136,6 +232,13 @@
    "metadata": {},
    "source": [
     "# Tuple"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tuple is just like list, but you cannot modify data stored in this container after initialisation"
    ]
   },
   {
@@ -177,6 +280,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can create new tuple by concatenationg two othe tuples"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -194,14 +304,28 @@
    "outputs": [],
    "source": [
     "my_tuple = ('a', 2 , 3, 'b', 5)\n",
-    "tinytuple = (6, 'c')\n",
-    "\n",
+    "tinytuple = (6, 'c')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "print(my_tuple)           # Prints complete list\n",
     "print(my_tuple[0])       # Prints first element of the list\n",
     "print(my_tuple[1:3])      # Prints elements starting from 2nd till 3rd \n",
     "print(my_tuple[2:])       # Prints elements starting from 3rd element\n",
     "print(tinytuple * 2)   # Prints list two times\n",
     "print(my_tuple + tinytuple) # Prints concatenated lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look at different Error messages after assignment to empty list and tuple."
    ]
   },
   {
@@ -228,7 +352,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task: pack two integers into one variable using list [] and tuple ()"
+    "# Task\n",
+    "Pack two integers into one variable using list `[]` and tuple `()`\n",
+    "\n",
+    "Cast tuple to list and otherwise.\n",
+    "\n",
+    "Do a list of three tuple objects initialised with following natural numbers, try to remove middle one from such created list."
    ]
   },
   {
@@ -238,28 +367,6 @@
    "outputs": [],
    "source": [
     "..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 1 False\n",
-      "1 0 True\n",
-      "0 1 True\n",
-      "0 0 0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for a in [1,0]:\n",
-    "    for b in [1, 0]:\n",
-    "        print(a,b,(a or b) and not (a and b))"
    ]
   }
  ],
@@ -296,5 +403,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
