--- a/lessons/Lesson 01 - Introduction.ipynb
+++ b/lessons/Lesson 01 - Introduction.ipynb
@@ -270,10 +270,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task\n",
+    "# Tasks\n",
     "List all known to you basic python types initialize them and print out their values.\n",
     "\n",
-    "Can you cast value of all of them to bool?"
+    "Can you cast value of all of them to bool? For example `bool(\"False\")`"
    ]
   },
   {
