--- a/lessons/Lesson 02 - Containers Part I - Lists & Tuples.ipynb
+++ b/lessons/Lesson 02 - Containers Part I - Lists & Tuples.ipynb
@@ -352,11 +352,185 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task\n",
-    "Pack two integers into one variable using list `[]` and tuple `()`\n",
-    "\n",
-    "Cast tuple to list and otherwise.\n",
-    "\n",
+    "# Tasks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 1\n",
+    "Print out elements and their indexes in list using `enumerate()` function.\n",
+    "```python\n",
+    "l = ['a','b','c']\n",
+    "```\n",
+    "Expected Output:\n",
+    "```\n",
+    "0 a\n",
+    "1 b\n",
+    "2 c\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 2\n",
+    "Print out elements from l1 and l2 using `zip()` function.\n",
+    "```python\n",
+    "l1 = ['a','b','c']\n",
+    "l2 = ['A','B','C']\n",
+    "```\n",
+    "Expected Output:\n",
+    "```\n",
+    "a A\n",
+    "b B\n",
+    "c C\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 3\n",
+    "Print out elements from l1 to the power of corresponding elments from l2.\n",
+    "```python\n",
+    "l1 = [1, 2, 3, 4]\n",
+    "l2 = [2, 2, 3, 3]\n",
+    "```\n",
+    "Expected Output:\n",
+    "```\n",
+    "1\n",
+    "4\n",
+    "27\n",
+    "64\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 4\n",
+    "Print out elements from l1 in order described in l2.\n",
+    "```python\n",
+    "l1 = ['y','p','o','n','t','h']\n",
+    "l2 = [1,0,4,5,2,3]\n",
+    "```\n",
+    "Expected Output:\n",
+    "```\n",
+    "p\n",
+    "y\n",
+    "t\n",
+    "h\n",
+    "o\n",
+    "n\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 5\n",
+    "Create new list, which will be merged list l1 and reverser l1, use `reverse()` function.\n",
+    "```python\n",
+    "l1 = [1,2,3]\n",
+    "l2 = list()\n",
+    "```\n",
+    "Expected Output:\n",
+    "```python\n",
+    "print(l2)\n",
+    "[1, 2, 3, 3, 2, 1]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 6\n",
+    "Pack two integers into one variable using list `[]` and tuple `()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 7\n",
+    "Cast tuple to list and otherwise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 8\n",
     "Do a list of three tuple objects initialised with following natural numbers, try to remove middle one from such created list."
    ]
   },
