--- a/lessons/Lesson 03 - Conditional Instructions & Operators.ipynb
+++ b/lessons/Lesson 03 - Conditional Instructions & Operators.ipynb
@@ -214,7 +214,17 @@
     "# Task: \n",
     "write statement that represent XOR.\n",
     "\n",
-    "XOR is logical operator that returns true only when two variables has diffenet value"
+    "XOR is logical operator that returns true only when two variables has diffenet value\n",
+    "\n",
+    "```python\n",
+    "a = 1\n",
+    "b = 0\n",
+    "# Your code\n",
+    "```\n",
+    "expected output:\n",
+    "```\n",
+    "True\n",
+    "```"
    ]
   },
   {
@@ -424,7 +434,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bin(88)"
+    "bin(6)"
    ]
   },
   {
@@ -433,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "int('0b1011000', 2)"
+    "int('0b101', 2)"
    ]
   },
   {
@@ -442,8 +452,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=int('1100000', 2)\n",
-    "b=int('0100110', 2)\n",
+    "a=int('010', 2)\n",
+    "b=int('101', 2)\n",
     "bin(a & b)"
    ]
   },
@@ -453,6 +463,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "a=int('010', 2)\n",
+    "b=int('101', 2)\n",
     "bin(a | b)"
    ]
   },
@@ -462,7 +474,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bin(a ^ b)"
+    "print(1 or 1)\n",
+    "print(1 or 0)\n",
+    "print(0 or 1)\n",
+    "print(0 or 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bin(a ^ b)\n",
+    "print(1 ^ 1)\n",
+    "print(1 ^ 0)\n",
+    "print(0 ^ 1)\n",
+    "print(0 ^ 0)"
    ]
   },
   {
@@ -527,7 +555,15 @@
    "metadata": {},
    "source": [
     "# Task: \n",
-    "Write if statement, that checks if three lengths can form a triangle."
+    "Write if statement, that checks if three lengths can form a triangle.\n",
+    "\n",
+    "```python\n",
+    "a = 7, b=8, c=16\n",
+    "```\n",
+    "expected output:\n",
+    "```\n",
+    "False\n",
+    "```"
    ]
   },
   {
@@ -544,7 +580,17 @@
    "metadata": {},
    "source": [
     "# Task: \n",
-    "Write if else statement that check if three points are on the same line "
+    "Write if else statement that check if three points are on the same line \n",
+    "\n",
+    "```python\n",
+    "a = (1,1)\n",
+    "b = (2,2)\n",
+    "c = (3,2)\n",
+    "```\n",
+    "expected output:\n",
+    "```\n",
+    "False\n",
+    "```"
    ]
   },
   {
