--- a/lessons/Lesson 04 - Loops.ipynb
+++ b/lessons/Lesson 04 - Loops.ipynb
@@ -223,7 +223,31 @@
    "metadata": {},
    "source": [
     "# Task: \n",
-    "write all combintations of two 6-sided dies. "
+    "write all combinations  of two 6-sided dies without repetitions.\n",
+    "expected output:\n",
+    "```\n",
+    "1 1\n",
+    "1 2\n",
+    "1 3\n",
+    "1 4\n",
+    "1 5\n",
+    "1 6\n",
+    "2 2\n",
+    "2 3\n",
+    "2 4\n",
+    "2 5\n",
+    "2 6\n",
+    "3 3\n",
+    "3 4\n",
+    "3 5\n",
+    "3 6\n",
+    "4 4\n",
+    "4 5\n",
+    "4 6\n",
+    "5 5\n",
+    "5 6\n",
+    "6 6\n",
+    "```"
    ]
   },
   {
@@ -240,7 +264,14 @@
    "metadata": {},
    "source": [
     "# Task: \n",
-    "write for loop that reverse all elements in list"
+    "write for loop that reverse all elements in list without using `reverse()` function.\n",
+    "```python\n",
+    "l = [1,2,3]\n",
+    "```\n",
+    "expected output:\n",
+    "```\n",
+    "[3, 2, 1]\n",
+    "```"
    ]
   },
   {
