kurs zrobiony do 07 functions

--- a/lessons/Lesson 06 - String Formatting.ipynb
+++ b/lessons/Lesson 06 - String Formatting.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: John \n",
+      "Surname: Smith\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"John\"\n",
     "surname = \"Smith\"\n",
@@ -39,9 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: John \n",
+      "Age: 23\n"
+     ]
+    }
+   ],
    "source": [
     "age = 23\n",
     "print(\"Name: %s \\nAge: %d\" % (name, age))"
@@ -49,20 +67,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: John \n",
+      "Age: 23\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Name: %d \\nAge: %d\" % (name, age))"
+    "print(\"Name: %s \\nAge: %d\" % (name, age))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: John, \n",
+      "Age:23\n"
+     ]
+    }
+   ],
    "source": [
-    "print(f\"Name: {name}, Age:{age}\")"
+    "print(f\"Name: {name}, \\nAge:{age}\")"
    ]
   },
   {
@@ -92,9 +128,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a = 4.340000\n",
+      "b = 54.432000\n",
+      "b = 54.4\n",
+      "In HEX 16 is 10\n"
+     ]
+    }
+   ],
    "source": [
     "a = 4.34\n",
     "b = 54.432\n",
@@ -108,9 +155,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'My name is John and I am 23 years old.'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'My name is {} and I am {} years old.'.format(name, age)"
    ]
@@ -139,11 +197,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This car is Nissan Navara of year 2007\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "brand, model, year = \"Nissan\", \"Navara\", 2007\n",
+    "print(f\"This car is {brand} {model} of year {year}\")"
    ]
   },
   {
@@ -155,9 +222,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'My name is John'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t = \"My name is John\"\n",
     "t"
@@ -165,27 +243,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aaaaaaaaaa'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"a\" * 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "n = \"abcdeabcde\"\n",
     "print(n.index(\"a\")) # 0\n",
@@ -194,9 +303,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "n = \"abrakadabra\"\n",
     "print(n.count(\"a\"))  # 5\n",
@@ -205,9 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n"
+     ]
+    }
+   ],
    "source": [
     "n = \"abcdefghijk\"\n",
     "print(n[2]) # c"
@@ -215,9 +341,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defg\n"
+     ]
+    }
+   ],
    "source": [
     "n = \"abcdefghijklmnop\"\n",
     "print(n[3:7]) # defg"
@@ -225,9 +359,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abcd\n",
+      "abcd\n",
+      "abcdefg\n",
+      "efg\n",
+      "efg\n"
+     ]
+    }
+   ],
    "source": [
     "n = \"abcdefg\"\n",
     "\n",
@@ -278,9 +424,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['My', 'name', 'is', 'John']\n"
+     ]
+    }
+   ],
    "source": [
     "n = \"My name is John\"\n",
     "tab = n.split(\" \")\n",
@@ -325,36 +479,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"This is Linode's documentation site.\""
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'This is Linode\\'s documentation site.'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'One line\\nnext line.'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'One line\\nnext line.'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One line\n",
+      "next line.\n"
+     ]
+    }
+   ],
    "source": [
     "print('One line\\nnext line.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tabulator\texample\n"
+     ]
+    }
+   ],
    "source": [
     "print('Tabulator\\texample')"
    ]
@@ -378,27 +571,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'example'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'   example '.strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This string has five words'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "' '.join(['This', 'string', 'has', 'five', 'words'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'one,two,three,four,five'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "','.join(['one', 'two', 'three', 'four', 'five'])"
    ]
@@ -421,17 +647,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "----------------------------------------\n",
+      "| Name:      John Smith\n",
+      "| Company:   Campol\n",
+      "| Email:     johnsmith@campol.com\n",
+      "| Phone:     492739273\n",
+      "----------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"John\"\n",
+    "surname = \"Smith\"\n",
+    "company = \"Campol\"\n",
+    "mail = \"johnsmith@campol.com\"\n",
+    "phone = 492739273\n",
+    "\n",
+    "business_card = f\"\"\"\n",
+    "----------------------------------------\n",
+    "| Name:      {name} {surname}\n",
+    "| Company:   {company}\n",
+    "| Email:     {mail}\n",
+    "| Phone:     {phone}\n",
+    "----------------------------------------\n",
+    "\"\"\"\n",
+    "\n",
+    "print(business_card)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "..."
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -445,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.12.0"
   },
   "toc": {
    "base_numbering": 1,
