--- a/lessons/Lesson 02 - Containers Part I - Lists & Tuples.ipynb
+++ b/lessons/Lesson 02 - Containers Part I - Lists & Tuples.ipynb
@@ -30,9 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = [1,2]\n",
     "a"
@@ -54,9 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 'three', 'three']\n"
+     ]
+    }
+   ],
    "source": [
     "print(a)"
    ]
@@ -70,9 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(a)"
    ]
@@ -86,9 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 'three']\n"
+     ]
+    }
+   ],
    "source": [
     "l = [1,2]\n",
     "l.append(\"three\")\n",
@@ -104,9 +142,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "print(l.pop())\n",
     "print(l)"
@@ -121,9 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 'three', 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "k = [3,4]\n",
     "c = l+k\n",
@@ -139,9 +194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print([1,2,3].pop())\n",
     "print([1,2,3].pop(0))\n",
@@ -159,9 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 'three', 3, 4, [10, 11]]\n"
+     ]
+    }
+   ],
    "source": [
     "c.append([10,11])\n",
     "print(c)"
@@ -178,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,9 +263,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 2, 3, 'b', 5]\n",
+      "a\n",
+      "[2, 3]\n",
+      "[3, 'b', 5]\n",
+      "[6, 'c', 6, 'c']\n",
+      "['a', 2, 3, 'b', 5, 6, 'c']\n"
+     ]
+    }
+   ],
    "source": [
     "print(my_list)          # complete list\n",
     "print(my_list[0])       # first element of the list\n",
@@ -202,9 +290,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "print(my_list[len(my_list)-1])\n",
     "print(my_list[-1])"
@@ -220,11 +317,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "[3, 4]\n",
+      "4\n",
+      "1\n",
+      "[2, 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "ol = [1, 2, 3, 4]\n",
+    "first_half = ol[0:2]\n",
+    "second_half = ol[2:]\n",
+    "print(first_half)\n",
+    "print(second_half)\n",
+    "print(ol.pop())\n",
+    "print(ol.pop(0))\n",
+    "print(ol)"
    ]
   },
   {
@@ -243,9 +359,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = (1,2)\n",
     "a"
@@ -253,18 +380,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[55], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m l \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[43ml\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mthree\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
+     ]
+    }
+   ],
    "source": [
     "l = (1,2)\n",
     "l.append(\"three\")"
@@ -272,9 +422,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'pop'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[56], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43ml\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'pop'"
+     ]
+    }
+   ],
    "source": [
     "l.pop()"
    ]
@@ -288,9 +450,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "k = (3,4)\n",
     "c = l+k\n",
@@ -299,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,9 +479,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', 2, 3, 'b', 5)\n",
+      "a\n",
+      "(2, 3)\n",
+      "(3, 'b', 5)\n",
+      "(6, 'c', 6, 'c')\n",
+      "('a', 2, 3, 'b', 5, 6, 'c')\n"
+     ]
+    }
+   ],
    "source": [
     "print(my_tuple)           # Prints complete list\n",
     "print(my_tuple[0])       # Prints first element of the list\n",
@@ -330,9 +513,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list assignment index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[63], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m my_list \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[43mmy_list\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list assignment index out of range"
+     ]
+    }
+   ],
    "source": [
     "my_list = []\n",
     "my_list[0] = 1"
@@ -340,9 +535,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[64], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m my_list \u001b[38;5;241m=\u001b[39m ()\n\u001b[0;32m----> 2\u001b[0m \u001b[43mmy_tuple\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "my_list = ()\n",
     "my_tuple[0] = 1"
@@ -374,11 +581,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 a\n",
+      "1 b\n",
+      "2 c\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "l = ['a', 'b', 'c']\n",
+    "\n",
+    "for index, element in enumerate(l):\n",
+    "    print(index, element)"
    ]
   },
   {
@@ -401,11 +621,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a A\n",
+      "b B\n",
+      "c C\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "l1 = ['a','b','c']\n",
+    "l2 = ['A','B','C']\n",
+    "\n",
+    "for pair1, pair2 in zip(l1, l2):\n",
+    "    print(pair1, pair2)"
    ]
   },
   {
@@ -429,11 +663,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "27\n",
+      "64\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "l1 = [1, 2, 3, 4]\n",
+    "l2 = [2, 2, 3, 3]\n",
+    "\n",
+    "for number, power in zip(l1, l2):\n",
+    "    print(number ** power)"
    ]
   },
   {
@@ -459,11 +708,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "l1 = ['y','p','o','n','t','h']\n",
+    "l2 = [1,0,4,5,2,3]\n",
+    "\n",
+    "for index in l2:\n",
+    "    print(l1[index])"
    ]
   },
   {
@@ -485,11 +751,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'reverse' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[75], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m l1 \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m]\n\u001b[1;32m      2\u001b[0m l2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m()\n\u001b[0;32m----> 4\u001b[0m l3 \u001b[38;5;241m=\u001b[39m \u001b[43mreverse\u001b[49m(l1)\n\u001b[1;32m      6\u001b[0m l2 \u001b[38;5;241m=\u001b[39m l1 \u001b[38;5;241m+\u001b[39m l3\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(l1)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'reverse' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "l1 = [1,2,3]\n",
+    "l2 = list()\n",
+    "\n",
+    "l3 = reverse(l1)\n",
+    "\n",
+    "l2 = l1 + l3\n",
+    "print(l1)"
    ]
   },
   {
@@ -502,11 +786,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n",
+      "(2, 4)\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "a = 2\n",
+    "b =4\n",
+    "\n",
+    "list = [a,b]\n",
+    "print(list)\n",
+    "\n",
+    "tuple = (a,b)\n",
+    "print(tuple)"
    ]
   },
   {
@@ -519,11 +819,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[84], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m my_list \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m]\n\u001b[1;32m      2\u001b[0m my_tuple \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmy_tuple\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'list' object is not callable"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "my_list = [1,2,3]\n",
+    "my_tuple = (1,2,3)\n",
+    "\n",
+    "print(tuple(my_list))\n",
+    "print(list(my_tuple))"
    ]
   },
   {
@@ -536,17 +852,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 2), (2, 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [ (1,2), (2,2), (2,3)]\n",
+    "my_list.pop(1)\n",
+    "print(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "..."
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -560,7 +893,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.12.0"
   },
   "toc": {
    "base_numbering": 1,
