--- a/lessons/Lesson 04 - Loops.ipynb
+++ b/lessons/Lesson 04 - Loops.ipynb
@@ -16,33 +16,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "while True:\n",
-    "    print(\"Hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
+    "lista = []\n",
     "while i < 6:\n",
-    "    print(i)\n",
-    "    i = i + 1"
+    "    lista.append(i)\n",
+    "    i = i + 1\n",
+    "    \n",
+    "print(lista)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while i < 6:\n",
@@ -59,9 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while i < 6:\n",
@@ -80,9 +103,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "while i < 6:\n",
@@ -101,9 +136,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "cherry\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
     "for x in fruits:\n",
@@ -112,9 +157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n",
+      "a\n",
+      "n\n",
+      "a\n",
+      "n\n",
+      "a\n"
+     ]
+    }
+   ],
    "source": [
     "for x in \"banana\":\n",
     "    print(x)"
@@ -130,11 +188,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "\n",
+    "for n in range(1, 6):\n",
+    "    print(n)"
    ]
   },
   {
@@ -147,11 +219,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "\n",
+    "for n in range(1,21):\n",
+    "    if n % 2 == 0:\n",
+    "     print(n)"
    ]
   },
   {
@@ -163,9 +255,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "for x in range(6):\n",
     "      print(x)"
@@ -173,9 +278,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n",
+      "8\n",
+      "11\n",
+      "14\n",
+      "17\n",
+      "20\n",
+      "23\n",
+      "26\n",
+      "29\n"
+     ]
+    }
+   ],
    "source": [
     "for x in range(2, 30, 3):\n",
     "      print(x)"
@@ -190,11 +312,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "for n in range(2,21,2):\n",
+    "    print(n)"
    ]
   },
   {
@@ -206,9 +346,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red apple\n",
+      "red banana\n",
+      "red cherry\n",
+      "big apple\n",
+      "big banana\n",
+      "big cherry\n",
+      "tasty apple\n",
+      "tasty banana\n",
+      "tasty cherry\n"
+     ]
+    }
+   ],
    "source": [
     "adj = [\"red\", \"big\", \"tasty\"]\n",
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
@@ -252,11 +408,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n",
+      "1 2\n",
+      "1 3\n",
+      "1 4\n",
+      "1 5\n",
+      "1 6\n",
+      "2 2\n",
+      "2 3\n",
+      "2 4\n",
+      "2 5\n",
+      "2 6\n",
+      "3 3\n",
+      "3 4\n",
+      "3 5\n",
+      "3 6\n",
+      "4 4\n",
+      "4 5\n",
+      "4 6\n",
+      "5 5\n",
+      "5 6\n",
+      "6 6\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "for x in range(1,7):\n",
+    "    for y in range(x,7):\n",
+    "        print(x, y)"
    ]
   },
   {
@@ -276,17 +462,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "..."
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -300,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.12.0"
   },
   "toc": {
    "base_numbering": 1,
