--- a/lessons/Lesson 05 - Containers Part II - Dictionary & Set.ipynb
+++ b/lessons/Lesson 05 - Containers Part II - Dictionary & Set.ipynb
@@ -23,9 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'one': 'This is one', 2: 'This is two'}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dict = {}\n",
     "dict['one'] = \"This is one\"\n",
@@ -35,9 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'john', 'code': 6734, 'dept': 'sales'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tinydict = {'name': 'john','code':6734, 'dept': 'sales'}\n",
     "tinydict"
@@ -45,9 +67,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is one\n",
+      "This is two\n",
+      "{'name': 'john', 'code': 6734, 'dept': 'sales'}\n",
+      "dict_keys(['name', 'code', 'dept'])\n",
+      "dict_values(['john', 6734, 'sales'])\n"
+     ]
+    }
+   ],
    "source": [
     "print(dict['one'])       # Prints value for 'one' key\n",
     "print(dict[2])           # Prints value for 2 key\n",
@@ -58,9 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "code\n",
+      "dept\n"
+     ]
+    }
+   ],
    "source": [
     "tinydict = {'name': 'john','code':6734, 'dept': 'sales'}\n",
     "for x in tinydict:\n",
@@ -69,9 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "john\n",
+      "6734\n",
+      "sales\n"
+     ]
+    }
+   ],
    "source": [
     "for x in tinydict:\n",
     "      print(tinydict[x])"
@@ -79,9 +133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "john\n",
+      "6734\n",
+      "sales\n"
+     ]
+    }
+   ],
    "source": [
     "for x in tinydict.values():\n",
     "      print(x)"
@@ -89,9 +153,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name john\n",
+      "code 6734\n",
+      "dept sales\n"
+     ]
+    }
+   ],
    "source": [
     "for x, y in tinydict.items():\n",
     "      print(x, y)"
@@ -99,9 +173,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'dict' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m thisdict \u001b[38;5;241m=\u001b[39m\t\u001b[38;5;28;43mdict\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mbrand\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mFord\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMustang\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43myear\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1964\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(thisdict)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'dict' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "thisdict =\tdict(brand=\"Ford\", model=\"Mustang\", year=1964)\n",
     "print(thisdict)"
@@ -140,9 +226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple', 'banana', 'cherry'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "thisset = set((\"apple\", \"banana\", \"cherry\"))\n",
     "thisset"
@@ -150,9 +247,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple', 'banana', 'cherry'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
     "thisset"
@@ -160,9 +268,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'banana', 'apple', 'cherry'}\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(thisset)\n",
     "print(\"banana\" in thisset)"
@@ -170,9 +287,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "banana\n",
+      "{'apple', 'cherry'}\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(thisset.pop())       # Prints value for 'one' key\n",
     "print(thisset)         # Prints complete set\n",
@@ -181,18 +308,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(thisset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'orange', 'banana', 'apple', 'cherry'}\n"
+     ]
+    }
+   ],
    "source": [
     "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
     "\n",
@@ -203,9 +349,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'banana', 'mango', 'grapes', 'apple', 'orange', 'cherry'}\n"
+     ]
+    }
+   ],
    "source": [
     "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
     "\n",
@@ -235,13 +389,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "a = {1,2,3,4,5}\n",
+    "b = {1,2}\n",
+    "print(b.issubset(a))"
    ]
   },
   {
@@ -253,9 +417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 5, 3, 5, 4, 3, 4, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "n = 'quick brown fox jumps over the lazy dog'\n",
     "s = n.split()  \n",
@@ -269,9 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 5, 3, 5, 4, 3, 4, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "n = 'quick brown fox jumps over the lazy dog'\n",
     "s = n.split()\n",
@@ -282,9 +462,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 5, 3, 5, 3, 4, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "n = 'quick brown fox jumps over the lazy dog'\n",
     "s = n.split()\n",
@@ -303,17 +491,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Quick Brown Fox Jumps Over The Lazy Dog\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = \"quick brown fox jumps over the lazy dog\"\n",
+    "s = n.split()\n",
+    "\n",
+    "capitalized_s = [word.capitalize() for word in s]\n",
+    "\n",
+    "capitalized_text = ' '.join(capitalized_s)\n",
+    "\n",
+    "print(capitalized_text)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "..."
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -327,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.12.0"
   },
   "toc": {
    "base_numbering": 1,
