--- a/lessons/Lesson 07 - Functions.ipynb
+++ b/lessons/Lesson 07 - Functions.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello from a function\n"
+     ]
+    }
+   ],
    "source": [
     "def my_function():\n",
     "      print(\"Hello from a function\")\n",
@@ -35,9 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Emil\n",
+      "Name: Tobias\n",
+      "Name: Linus\n"
+     ]
+    }
+   ],
    "source": [
     "def my_function(fname):\n",
     "      print(\"Name: \" + fname)\n",
@@ -56,9 +74,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am from Sweden\n",
+      "I am from India\n",
+      "I am from Norway\n"
+     ]
+    }
+   ],
    "source": [
     "def my_function(country = \"Norway\"):\n",
     "      print(\"I am from \" + country)\n",
@@ -77,9 +105,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "cherry\n"
+     ]
+    }
+   ],
    "source": [
     "def my_function(food):\n",
     "    for x in food:\n",
@@ -99,9 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "25\n",
+      "45\n"
+     ]
+    }
+   ],
    "source": [
     "def my_function(x):\n",
     "      return 5 * x\n",
@@ -120,9 +168,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Recursion Example Results\n",
+      "1\n",
+      "3\n",
+      "6\n",
+      "10\n",
+      "15\n",
+      "21\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def tri_recursion(k):\n",
     "    if(k>0):\n",
@@ -146,11 +220,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
    "source": [
-    "..."
+    "def remove_even_positions(lst):\n",
+    "    # Usuwa elementy na parzystych pozycjach (licząc indeksy od 0)\n",
+    "    return [item for index, item in enumerate(lst) if index % 2 != 0]\n",
+    "\n",
+    "# Przykład użycia\n",
+    "example_list = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "result_list = remove_even_positions(example_list)\n",
+    "print(result_list)"
    ]
   },
   {
@@ -190,7 +279,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -204,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.12.0"
   },
   "toc": {
    "base_numbering": 1,
