kurs zrobiony do 07 functions

--- a/lessons/Lesson 07 - Functions.ipynb
+++ b/lessons/Lesson 07 - Functions.ipynb
@@ -256,7 +256,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "..."
+    "def f(x):\n",
+    "    return x**3 + 2*x + 2\n",
+    "\n",
+    "print(f(1))  #\n",
+    "print(f(2))  "
    ]
   },
   {
@@ -273,7 +277,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "..."
+    "def fibonacci(n):\n",
+    "    a, b = 0, 1  # Początkowe dwie wartości ciągu Fibonacciego\n",
+    "    for _ in range(n):\n",
+    "        a, b = b, a + b  # Przesuwamy wartości: a przyjmuje wartość b, a b sumę obecnych wartości a i b\n",
+    "    return a\n",
+    "\n",
+    "# Przykładowe wywołanie funkcji\n",
+    "n = 10  # Chcemy obliczyć 10-ty element ciągu\n",
+    "print(f\"{n}-ty element ciągu Fibonacciego to: {fibonacci(n)}\")"
    ]
   }
  ],
